src/styles.css
.container {
  margin-left: auto;
  margin-right: auto;
  min-width: 520px;
  text-align: center;
  width: 520px;
}

.bod-style {
  border-radius: 15px;
  margin: 30px;
  height: 670px;

  padding: 16px 30px 0px 30px;
  border: solid #c2c8cf 2px;
}

#location-search-result {
  text-align: center;
  display: block;
  padding: 10px 0 0 0;
  margin: 0 auto;
  font-family: "Nunito", sans-serif;
  letter-spacing: 2.5px;
  font-size: 46px;
  line-height: 70px;
}

#current-icon {
  padding: 0px 220px 0 0;
}

.current-temp {
  text-align: center;
  display: inline-block;
  padding: 0px 0px 10px 0px;
  font-size: 80px;
  line-height: 60px;
}

#current-description {
  font-size: 14px;
  text-align: center;
  color: #6d7888;
}

#current-high,
#current-low {
  font-size: 12px;
  text-align: right;
  margin: 0 auto;
}

#current-date-time {
  font-size: 12px;
  text-align: center;
  color: #96a1b1;
  padding-top: 20px;
  margin: 0 auto;
}

.weather-details {
  list-style: none;
  text-align: left;
  padding: 0px;
  font-size: 12px;
}

#current-details-row {
  padding-left: 4px;
  position: relative;
  top: 20px;
  color: #96a1b1;
}

#current-highlow-row {
  padding-right: 4px;
  position: relative;
  top: 20px;
  color: #96a1b1;
}
.divider-bottom,
.divider-top {
  background: white;
  height: 1px;
  display: block;
  width: 100%;
}

.divider-bottom {
  margin: 14px 0px 6px 0px;
}
.divider-top {
  margin: 10px 0 5px 0;
}

.future {
  color: #6d7888;
  font-family: "Inter", sans-serif;
  letter-spacing: 1.5px;
  text-align: center;
  margin: 0 auto;
  display: block;
}

.future-days-of-week {
  padding: 16px 0 0 0;
  display: block;
  margin: 0 auto;
  text-align: center;
  font-size: 12px;
}

.future-highlows {
  font-size: 12px;
  font-weight: 400;
}

.future-weather-icon {
  font-size: 28px;
  padding: 10px 0;
  color: black;
}

.units {
  display: block;
  font-family: "Inter", sans-serif;
  font-size: 14px;
  font-weight: 100;
  text-align: left;
}
.units .active {
  color: black;
  cursor: default;
}

.units .active:hover {
  text-decoration: none;
}
#celcius-link,
#fahrenheit-link {
  background: transparent;
  border: none;
  padding: 0;
  font-weight: 400;
}

#form-city-search {
  padding: 10px 0px 10px 38px;
}

.search-icon {
  padding: 5px;
  background: none;
  border: none;
  cursor: pointer;
  font-size: 18px;
  color: #627186;
}

#search-bar {
  border-radius: 12px;
  padding: 10px 10px;
  width: 210px;
  border: 3px solid;
  background-color: transparent;
  position: relative;
  margin: 14px 0 2px 12px;
}

#search-bar:focus {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 12px;
  text-align: center;
}

#search-bar:placeholder-shown {
  font-size: 12px;
  text-align: center;
}

input:focus::placeholder {
  color: transparent;
}

input,
select,
#search-bar {
  text-align: center;
  color: lightslategrey;
  border: solid 2px;
}

#current-location {
  display: block;
  margin: 0 auto;
  padding: 12px 18px;
  border-radius: 50px;
  border: none;
  background-color: #3a4867;
  color: whitesmoke;
  font-family: "Inter", sans-serif;
  font-size: 12px;
}

#current-location:hover {
  background-color: #627186;
  transition: all 200ms ease-in-out;
}

#open-source {
  color: #3a4867;
  font-family: "Nunito", sans-serif;
  position: relative;
  top: 25px;
  right: 120px;
  font-size: 12px;
}

#open-source:hover {
  transition: all 200ms ease-in-out;
  color: rgb(52, 52, 102);
}

#name {
  color: rgb(179, 179, 179);
  font-family: "Nunito", sans-serif;
  display: inline-block;
  position: relative;
  top: 25px;
  right: 120px;
  font-size: 12px;
}

